tests/paczka2/big_fuzzy/26676806.err
Error in line 1: SYbu A93 29,1
Error in line 2: 4bUz S875 18,3
Error in line 3: SYbu A25 36,9
Error in line 11: SYbu S875 3,2
Error in line 17: Q0hbyBEGBt S860 85,8
Error in line 14: LhR5 S875 88,4
Error in line 24: 7wzZ A93 68,76
Error in line 19: Q0hbyBEGBt A93 66,4
Error in line 21: 7wzZ A93 25,8
Error in line 36: Q0hbyBEGBt A93 71,2
Error in line 32: 7wzZ S860 11,6
Error in line 39: S875 A25 4,1
Error in line 13: 4bUz A25 256,5
Error in line 46: 4bUz S860 9,7
Error in line 59: Q0hbyBEGBt A93 77,7
Error in line 76: 4bUz A93 263,10
Error in line 67: 4bUz A93 59,9
Error in line 77: SYbu S875 20,7
Error in line 86: SYbu A93 75,83
Error in line 89: SYbu A93 280,9
Error in line 94: Q0hbyBEGBt A93 -1,1
Error in line 99: 4bUz A93 12,9
Error in line 105: SYbu A93 41,0
Error in line 100: 4bUz S860 37,4
Error in line 110: SYbu S860 72,7
Error in line 111: LhR5 S860 31,0
Error in line 112: 4bUz A93 93,8
Error in line 127: 7wzZ S875 -1,7
Error in line 117: LhR5 S875 86,2
Error in line 140: SYbu S875 14,1
Error in line 129: LhR5 S860 11,2
Error in line 151: 4bUz A93 60,1
Error in line 164: acRWdSiYVT S875 204,4
Error in line 165: 4bUz A93 52,3
Error in line 93: Q0hbyBEGBt A93 17,0
Error in line 179: SYbu S860 259,6
Error in line 180: 4bUz S875 26,3
Error in line 193: Q0hbyBEGBt A25 64,2
Error in line 203: SYbu S860 62,9
Error in line 200: Q0hbyBEGBt A93 79,2
Error in line 227: S875 S875 34,3
Error in line 233: S875 A93 23,4
Error in line 235: S875 S875 81,4
Error in line 238: LhR5 S860 22,8
Error in line 223: 4bUz A93 311,5
